--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -226,7 +226,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.141.240;
 allow 177.93.140.66;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -270,6 +269,7 @@ allow 185.107.57.65;
 allow 185.107.57.66;
 allow 185.112.144.11;
 allow 185.112.146.167;
+allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.129.61.1;
@@ -808,6 +808,7 @@ allow 23.129.64.163;
 allow 23.129.64.164;
 allow 23.129.64.165;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -832,11 +833,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.3;
 allow 23.191.200.30;
-allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -879,6 +880,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1074,7 +1076,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1100,7 +1102,6 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
-allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1411,7 +1412,6 @@ allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
-allow 37.228.129.162;
 allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
@@ -1522,6 +1522,7 @@ allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.192;
 allow 45.94.31.68;
+allow 45.95.169.102;
 allow 45.95.169.104;
 allow 45.95.169.109;
 allow 45.95.169.110;
@@ -1546,7 +1547,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1716,7 +1717,6 @@ allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
 allow 94.72.104.135;
-allow 94.74.164.89;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.211.174.137;
