--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -226,7 +226,6 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.141.240;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
@@ -270,6 +269,7 @@ set_real_ip_from 185.107.57.65;
 set_real_ip_from 185.107.57.66;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
+set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
 set_real_ip_from 185.129.61.1;
@@ -808,6 +808,7 @@ set_real_ip_from 23.129.64.163;
 set_real_ip_from 23.129.64.164;
 set_real_ip_from 23.129.64.165;
 set_real_ip_from 23.137.248.100;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
@@ -832,11 +833,11 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -879,6 +880,7 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -1074,7 +1076,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:82c0::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1100,7 +1102,6 @@ set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
-set_real_ip_from 2a06:1700:1:109::209:a94;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -1411,7 +1412,6 @@ set_real_ip_from 37.114.63.5;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.221.208.71;
 set_real_ip_from 37.228.129.128;
-set_real_ip_from 37.228.129.162;
 set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
@@ -1522,6 +1522,7 @@ set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
+set_real_ip_from 45.95.169.102;
 set_real_ip_from 45.95.169.104;
 set_real_ip_from 45.95.169.109;
 set_real_ip_from 45.95.169.110;
@@ -1546,7 +1547,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1716,7 +1717,6 @@ set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
-set_real_ip_from 94.74.164.89;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.211.174.137;
