--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -10,6 +10,7 @@ set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
 set_real_ip_from 2001:41d0:304:200::9dce;
+set_real_ip_from 2001:41d0:401:3000::1f88;
 set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:601:1100::6f85;
 set_real_ip_from 2001:41d0:601:1100::71bb;
@@ -145,7 +146,6 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -264,6 +264,7 @@ set_real_ip_from 2620:18c:0:192::e0:166;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:6:c1::4858;
+set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
