--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,7 +119,6 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -137,6 +136,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 131.72.79.38;
+allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -178,7 +178,6 @@ allow 162.220.14.78;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
-allow 164.132.58.8;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 171.25.193.131;
@@ -478,6 +477,7 @@ allow 185.67.82.114;
 allow 185.82.219.109;
 allow 188.214.104.21;
 allow 188.239.191.25;
+allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
@@ -622,12 +622,12 @@ allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
-allow 2001:41d0:401:3000::1f88;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -720,7 +720,6 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -821,7 +820,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -829,8 +827,10 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.29;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1030,12 +1030,14 @@ allow 2a02:c204:2261:2270::1;
 allow 2a02:c204:2263:5153::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
+allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 allow 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 allow 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 allow 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
+allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 allow 2a03:4000:28:1e8::69;
@@ -1071,7 +1073,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1348,7 +1349,6 @@ allow 2a12:a800:2:1:185:241:208:82;
 allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
-allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
@@ -1391,7 +1391,6 @@ allow 2a12:a800:9:1:193:26:115:82;
 allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
-allow 2a12:de40:21:1be4::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
@@ -1437,11 +1436,9 @@ allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
-allow 45.135.180.92;
 allow 45.137.70.158;
 allow 45.138.16.107;
 allow 45.138.16.113;
-allow 45.138.16.164;
 allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.231;
@@ -1542,7 +1539,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1653,7 +1649,6 @@ allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
 allow 88.151.192.2;
-allow 88.151.194.24;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
@@ -1665,7 +1660,6 @@ allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.234.157.254;
-allow 89.32.41.150;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
@@ -1708,6 +1702,7 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.156.152.234;
 allow 94.16.115.121;
+allow 94.16.121.91;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
