--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -10,12 +10,12 @@ allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
-allow 2001:41d0:401:3000::1f88;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -108,7 +108,6 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -297,12 +296,14 @@ allow 2a02:c204:2261:2270::1;
 allow 2a02:c204:2263:5153::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
+allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 allow 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 allow 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 allow 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
+allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 allow 2a03:4000:28:1e8::69;
@@ -338,7 +339,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -615,7 +615,6 @@ allow 2a12:a800:2:1:185:241:208:82;
 allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
-allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
@@ -658,6 +657,5 @@ allow 2a12:a800:9:1:193:26:115:82;
 allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
-allow 2a12:de40:21:1be4::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
