--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -108,6 +108,7 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -280,6 +281,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
+allow 2a01:4f8:121:4484::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -296,14 +298,12 @@ allow 2a02:c204:2261:2270::1;
 allow 2a02:c204:2263:5153::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
-allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 allow 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 allow 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 allow 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
-allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 allow 2a03:4000:28:1e8::69;
@@ -360,6 +360,9 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
+allow 2a06:1700:0:12::1;
+allow 2a06:1700:0:12::2;
+allow 2a06:1700:0:12::3;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
@@ -615,6 +618,7 @@ allow 2a12:a800:2:1:185:241:208:82;
 allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
+allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
