--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -848,6 +848,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -860,6 +861,7 @@ allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.7;
@@ -1102,6 +1104,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1595,6 +1598,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1680,7 +1684,6 @@ allow 82.153.138.241;
 allow 82.153.138.7;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
 allow 83.147.17.190;
@@ -1762,7 +1765,6 @@ allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
 allow 94.72.104.135;
-allow 94.74.164.89;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.168.173.143;
