--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -41,6 +41,7 @@ set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
+set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
 set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
