--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -73,6 +73,7 @@ set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.14.4;
+set_real_ip_from 107.189.14.43;
 set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.29.184;
@@ -156,6 +157,7 @@ set_real_ip_from 149.102.153.38;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.44.47;
+set_real_ip_from 151.217.169.242;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
 set_real_ip_from 152.53.184.161;
@@ -772,6 +774,7 @@ set_real_ip_from 204.194.29.4;
 set_real_ip_from 204.8.156.142;
 set_real_ip_from 204.85.191.7;
 set_real_ip_from 204.85.191.8;
+set_real_ip_from 204.85.191.9;
 set_real_ip_from 204.8.96.120;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
@@ -990,6 +993,7 @@ set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
+set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:a140:2262:7686::1;
 set_real_ip_from 2605:a141:2261:4410::1;
