--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -229,6 +229,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
+allow 177.149.145.208;
 allow 177.93.140.66;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -1005,6 +1006,7 @@ allow 2605:e440:38::21a;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
+allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2620:18c:0:192::e0:130;
 allow 2620:18c:0:192::e0:131;
 allow 2620:18c:0:192::e0:132;
@@ -1487,6 +1489,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1513,7 +1516,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1604,7 +1606,6 @@ allow 45.88.186.92;
 allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
-allow 45.9.168.192;
 allow 45.9.168.43;
 allow 45.94.31.68;
 allow 45.95.169.102;
